--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb://localhost:27017/noteApp
+MONGO_URL=mongodb+srv://gaiya:gaiya123@cluster0.d6n0r.mongodb.net/notes?retryWrites=true&w=majority
