--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "npm run server"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
