--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://gaiya:gaiya123@cluster0.d6n0r.mongodb.net/notes?retryWrites=true&w=majority
+# MONGO_URL3=mongodb+srv://gaiya:gaiya123@cluster0.d6n0r.mongodb.net/notes?retryWrites=true&w=majority
+MONGO_URL=mongodb://host.docker.internal:27017/note-api
