--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "server": "nodemon ./bin/www",
-    "dev": "npm run server"
+    "server": "dev ./bin/www",
+    "dev": "node app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
