--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,3 +26,15 @@ spec:
           envFrom:
           - configMapRef:
               name: app-config
+          env:
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: app-secret
+                  key: JWT_SECRET
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
